<resources>
    <string name="app_name">Remote Control</string>
    <string name="disconnected">Disconnected</string>
    <string name="connected">Connected</string>
    <string name="temperature">Temperature:</string>
    <string name="min_temperature">+0</string>
    <string name="max_temperature">+15</string>
    <string name="p_ten">+10</string>
    <string name="mode">Mode:</string>
    <string name="parallel">Parallel</string>
    <string name="flow">Flow</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="set">Set</string>
    <string name="run">Run</string>
    <string name="round">Round: 0/10</string>
    <string name="ring">Rings: 0</string>
    <string name="node">Node</string>
    <string name="heat">Heat</string>
    <string name="vib">Vibrate</string>
    <string name="vibTime">Vib Time(s):</string>
    <string name="vibNode">Vib Node:</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
</resources>
