<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/control_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/extra_Temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature"
            android:textSize="25sp"
            android:layout_marginBottom="10sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min_temperature"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textAlignment="center"/>

            <SeekBar
                android:id="@+id/skBar_temperature"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:max="15"
                android:layout_gravity="center"
                android:layout_weight="15"/>

            <TextView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:text="@string/max_temperature"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textAlignment="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mode"
                android:textSize="25sp"
                android:layout_weight="1"/>

            <RadioGroup
                android:id="@+id/mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/modeNode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/node"
                    android:textSize="25sp"
                    android:checked="true"
                    android:layout_marginEnd="15dp"/>  <!-- 默认选中 -->

                <RadioButton
                    android:id="@+id/modeFlow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:text="@string/flow"
                    android:layout_marginEnd="15dp"/>
            </RadioGroup>
        </LinearLayout>



        <LinearLayout
            android:id="@+id/layoutNode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="15dp"
            android:visibility="visible">

            <!-- 第一行：TextView -->
            <TextView
                android:id="@+id/node_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/node"
                android:textSize="25sp"
                android:layout_marginBottom="8dp"
                android:layout_gravity="start"/>

            <!-- 第二行：六个 CheckBox 水平排列 -->
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="6"
                android:rowCount="1"
                android:alignmentMode="alignMargins"
                android:useDefaultMargins="true">

                <CheckBox
                    android:id="@+id/nodeOne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/one"
                    android:textSize="25sp"
                    android:checked="true"/>

                <CheckBox
                    android:id="@+id/nodeTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/two"
                    android:textSize="25sp"/>

                <CheckBox
                    android:id="@+id/nodeThree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/three"
                    android:textSize="25sp"/>

                <CheckBox
                    android:id="@+id/nodeFour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/four"
                    android:textSize="25sp"/>

                <CheckBox
                    android:id="@+id/nodeFive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/five"
                    android:textSize="25sp"/>

                <CheckBox
                    android:id="@+id/nodeSix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/six"
                    android:textSize="25sp"/>
            </GridLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/layoutFlow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flow"
                android:textSize="25sp"
                android:layout_weight="1"/>

            <RadioGroup
                android:id="@+id/flow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/flowLeft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/left"
                    android:textSize="25sp"
                    android:checked="true"
                    android:layout_marginEnd="15dp"/>  <!-- 默认选中 -->

                <RadioButton
                    android:id="@+id/flowRight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:text="@string/right"
                    android:layout_marginEnd="15dp"/>
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vibTime"
                android:textSize="25sp"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/vib_time"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="4"
                android:hint="Default 8s"
                android:inputType="number"/>
        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp">

            <Button
                android:id="@+id/btn_connect"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/disconnected"
                android:textSize="23sp"
                android:layout_weight="1"
                android:backgroundTint="@color/warning_red"
                android:layout_marginEnd="10dp"/>

<!--            <Button-->
<!--                android:id="@+id/btn_set"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:text="@string/set"-->
<!--                android:textSize="23sp"-->
<!--                android:backgroundTint="@color/dodgerBlue"/>-->
        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp">

            <Button
                android:id="@+id/btn_heat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/heat"
                android:textSize="23sp"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/warning_red"/>

            <Button
                android:id="@+id/btn_vib"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/vib"
                android:textSize="23sp"
                android:backgroundTint="@color/dodgerBlue"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_run"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/run"
            android:textSize="23sp"
            android:backgroundTint="@color/dodgerBlue"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/monitor"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="100dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/control_panel"
        app:layout_constraintBottom_toBottomOf="parent">


        <ProgressBar
            android:id="@+id/process"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:max="8"
            android:padding="20dp" />

        <TextView
            android:id="@+id/monitor_temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/temperature"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
